--- a/FE/package.json
+++ b/FE/package.json
@@ -20,12 +20,14 @@
         "react-dom": "^18",
         "react-intersection-observer": "^9.13.0",
         "react-redux": "^9.1.2",
+        "react-spinners": "^0.14.1",
         "swiper": "^11.1.9"
     },
     "devDependencies": {
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/react-slick": "^0.23.13",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
