--- a/FE/.env
+++ b/FE/.env
@@ -1,4 +1,4 @@
-# NEXT_DOMAIN_URL= https://tgdd-nodejs-thu.vercel.app
-# NEXT_PUBLIC_DOMAIN_URL= https://tgdd-nodejs-thu.vercel.app
-NEXT_DOMAIN_URL= http://localhost:5000
-NEXT_PUBLIC_DOMAIN_URL= http://localhost:5000
+NEXT_DOMAIN_URL= https://tgdd-nodejs-2dcg05qfd-vothithu11s-projects.vercel.app
+NEXT_PUBLIC_DOMAIN_URL= https://tgdd-nodejs-2dcg05qfd-vothithu11s-projects.vercel.app
+# NEXT_DOMAIN_URL= http://localhost:5000
+# NEXT_PUBLIC_DOMAIN_URL= http://localhost:5000
