--- a/FE/tsconfig.json
+++ b/FE/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/slice/nameUserSlice.js", "src/components/formatPrice.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/slice/nameUserSlice.js", "src/components/FormatPrice.js"],
   "exclude": ["node_modules"]
 }
