--- a/FE/.env
+++ b/FE/.env
@@ -1,5 +1,5 @@
-# NEXT_DOMAIN_URL= https://tgdd-nodejs-thu.vercel.app
-# NEXT_PUBLIC_DOMAIN_URL= https://tgdd-nodejs-thu.vercel.app
+# NEXT_DOMAIN_URL= https://tgdd-nodejs-bkrhw6eq1-vothithu11s-projects.vercel.app
+# NEXT_PUBLIC_DOMAIN_URL= https://tgdd-nodejs-bkrhw6eq1-vothithu11s-projects.vercel.app
 NEXT_DOMAIN_URL= http://localhost:5000
 NEXT_PUBLIC_DOMAIN_URL= http://localhost:5000
 
