--- a/FE/package.json
+++ b/FE/package.json
@@ -18,6 +18,7 @@
         "next": "14.2.4",
         "popmotion": "^11.0.5",
         "react": "^18",
+        "react-countdown": "^2.3.6",
         "react-dom": "^18",
         "react-file-base64": "^1.0.3",
         "react-hook-form": "^7.53.2",
@@ -27,7 +28,8 @@
         "react-slick": "^0.30.2",
         "react-slider": "^2.0.6",
         "react-spinners": "^0.14.1",
-        "swiper": "^11.1.14"
+        "swiper": "^11.1.14",
+        "tailwind-scrollbar": "^3.1.0"
     },
     "devDependencies": {
         "@types/node": "^20",
